# simcal

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  Jenkinsfile  README.rst  __init__.py  pyproject.toml  setup.cfg
jwst/imaging/: test_nircam.py
jwst_tests/imaging/: test_nircam.py
jwst_tests/imaging/imaging_example_data/: Observation_table_for_example_imaging_program.csv  Observation_table_for_example_imaging_program.xml_with_yaml_parameters.csv  jw42424001001_01101_00001_nrcb1.yaml  jw42424001001_01101_00001_nrcb2.yaml  jw42424001001_01101_00001_nrcb3.yaml  jw42424001001_01101_00001_nrcb4.yaml  jw42424001001_01101_00001_nrcb5.yaml  jw42424001001_01101_00002_nrcb1.yaml  jw42424001001_01101_00002_nrcb2.yaml  jw42424001001_01101_00002_nrcb3.yaml  jw42424001001_01101_00002_nrcb4.yaml  jw42424001001_01101_00002_nrcb5.yaml  jw42424001001_01101_00003_nrcb1.yaml  jw42424001001_01101_00003_nrcb2.yaml  jw42424001001_01101_00003_nrcb3.yaml  jw42424001001_01101_00003_nrcb4.yaml  jw42424001001_01101_00003_nrcb5.yaml  jw42424001001_01101_00004_nrcb1.yaml  jw42424001001_01101_00004_nrcb2.yaml  jw42424001001_01101_00004_nrcb3.yaml  jw42424001001_01101_00004_nrcb4.yaml  jw42424001001_01101_00004_nrcb5.yaml  observation_list.yaml
simcal/: __init__.py
simcal/jwst_tests/imaging/: NIRISS_WFSS.py  niriss_wfss.py  test_nircam.py  test_niriss_wfss.py
