[metadata]
name = simcal
description = Tests JWST simulator and pipeline.
long_description = Tests JWST simulator and pipeline.
author = Somto Nweke
license = BSD-3-Clause

Source Code = https://github.com/spacetelescope/simcal
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    jwst>=0.17.1
    mirage
    pytest>=6.1.2


[flake8]
select = F, W, E101, E111, E112, E113, E401, E402, E501, E711, E722
# We should set max line length to 88 eventually
max-line-length = 130


ignore = E203, W503, W504, W605

[tool:pytest]
minversion = 4.6
norecursedirs = docs/_build jwst/timeconversion jwst/extern scripts
asdf_schema_tests_enabled = true
asdf_schema_validate_default = false
asdf_schema_root = jwst/transforms/schemas jwst/JWST/schemas
junit_family = xunit2
inputs_root = jwst-pipeline
results_root = jwst-pipeline-results
doctest_plus = true
doctest_rst = true
text_file_format = rst
addopts = --show-capture=no --open-files --doctest-ignore-import-errors
filterwarnings =
    ignore:Models in math_functions:astropy.utils.exceptions.AstropyUserWarning
